--- a/profolio/public/index.html
+++ b/profolio/public/index.html
@@ -5,7 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <meta property="og:title" content=""/>
+    <meta property="og:image" content=""/>
+    <meta property="og:url" content=""/>
+    <meta property="og:site_name" content=""/>
+    <meta property="og:description" content=""/>
+    <meta name="twitter:title" content="" />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:url" content="" />
+    <meta name="twitter:card" content="" />
+      <meta
       name="description"
       content="Web site created using create-react-app"
     />
@@ -63,7 +72,7 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-    <title>React App</title>
+    <title>Balay Template</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
